pluralization: en & ru for questions

--- a/app/assets/stylesheets/users.css
+++ b/app/assets/stylesheets/users.css
@@ -47,6 +47,10 @@
   background: #D9E6E5;
 }
 
+.user-questions-quantity {
+  color: #d8d8d8;
+}
+
 .user-question-form {
   padding: 10px;
   margin-left: 10px;
