background color for user profile

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -43,6 +43,11 @@
         </div>
 
         <div class="form-field">
+          <%= f.label 'Цвет фона', class: 'form-label' %>
+          <%= f.color_field :color, class: 'form-text-field' %>
+        </div>
+
+        <div class="form-field">
           <%= f.label :password, 'Пароль', class: 'form-label' %>
           <%= f.password_field :password, class: 'form-text-field' %>
         </div>
