--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<div class="user-header text-center">
+<div style="background: <%= @user.color %>" class="user-header text-center">
   <h1 class="title-medium">
     <%= @user.name %>
   </h1>
