--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -38,6 +38,11 @@
           <%= f.text_field :avatar_url, class: 'form-text-field' %>
         </div>
 
+        <div class="form-field">
+          <%= f.label 'Цвет фона', class: 'form-label' %>
+          <%= f.color_field :color, class: 'form-text-field' %>
+        </div>
+
         <div class="buffer-top-large buffer-bottom">
           Если не хотите менять пароль — оставьте эти поля пустыми!
         </div>
