new route users#destroy, 'delete account' button with new css style

--- a/app/assets/stylesheets/button.css
+++ b/app/assets/stylesheets/button.css
@@ -19,6 +19,12 @@
   color: #fff;
 }
 
+.button-red {
+    background: #cc0000;
+    color: #fff;
+    float: right;
+}
+
 .button-light {
   background: #00948a;
   color: #fff;
