--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -60,6 +60,11 @@
         <div class="form-action buffer-top">
           <%= f.submit 'Сохранить', class: 'button button-dark button-small' %>
         </div>
+
+        <div class="form-action buffer-top">
+          <%= link_to 'Удалить аккаунт', user_path(@user), method: :delete, data: {confirm: 'Вы точно хотите удалить аккаунт?'},
+                      class: 'button button-red button-small' %>
+        </div>
     <% end %>
 
     <%# Подробнее про помощники для создания форм: %>
