migration for Question (author_id column, css for author, changes in question controller & question model

--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -20,6 +20,13 @@
     <div class="question-date">
       <%= l(question.created_at, format: :short) %>
     </div>
+
+    <%# Username автора вопроса %>
+    <% if question.author.present? %>
+        <div class="question-author">
+          @<%= question.author.username %>
+        </div>
+    <% end %>
   </div>
 
   <%# Если адресат вопроса — текущий пользователь, он может редактировать вопрос %>
