new delete account button - dark

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,7 +3,7 @@
   <span title="Удалить аккаунт">
     <%= link_to fa_icon('trash'), user_path(@user), method: :delete,
                 data: {confirm: 'Вы точно хотите удалить аккаунт?'},
-                class: 'button-red fa-lg'%>
+                class: 'fa-2x button-trash' %>
   </span>
 </div>
 
