--- a/app/assets/stylesheets/button.css
+++ b/app/assets/stylesheets/button.css
@@ -10,10 +10,10 @@
 }
 
 .button-delete {
-    display: inline-block;
-    float: right;
-    margin-top: 20px;
-    margin-right: 20px;
+  display: inline-block;
+  float: right;
+  margin-top: 10px;
+  margin-right: 10px;
 }
 
 .button-dark {
@@ -26,8 +26,8 @@
   color: #fff;
 }
 
-.button-red {
-    color: darkred;
+.button-trash {
+  color: #2e2f41;;
 }
 
 .button-light {
