remote ip in questions from anonymous

--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -26,11 +26,13 @@
         <div class="question-author">
           <%= link_to "@#{question.author.username}", user_path(question.author) %>
         </div>
-    <% end %>
-
-    <% if question.author.present? && question.author == current_user %>
+    <% elsif question.author.present? && question.author == current_user %>
         <div class="question-author">
           <%= "@#{question.author.username}" %>
+        </div>
+    <% else %>
+        <div class="question-author">
+          <%= question.ip %>
         </div>
     <% end %>
   </div>
